# Endive

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml  pytest.ini
docs/: about.html  examples.html  index.html  reference.html  tutorial.html
docs/css/: style.css
docs/js/: nav.js
endive_core/: dune-project  endive_core.opam
endive_core/src/: display.ml  dune  endive_core.ml  engine.ml  index.mld  kernel.ml  objects.ml
endive_core/test/: dune  scripts.ml  test_display.ml  test_engine.ml  test_kernel.ml
endive_gui/: dune-project  endive_gui.opam
endive_gui/lib/: app.ml  dune  editor.ml  files.ml  lexer.mll  parser.mly  reader.ml
endive_gui/test/: dune
examples/: and.end  arithmetic.end  currifier.end  induction.end  logic.end  sum_of_k.end
src/: __init__.py
src/app/: __init__.py  cli.py
src/core/: __init__.py  buildability.py  objects.py  operations.py  utils.py
src/engine/: __init__.py  display.py  engine.py  importer.py  parser.py  pipeline.py
src/engine/helpers/: __init__.py  alias.py  build.py  functorial.py  goal.py  helper.py  peano.py
src/engine/helpers/utils/: build.py  functorial.py  goal.py
tests/: alias.end  build.end  commands.end  core.end  functorial.end  goal.end  integration.py  parsing.end  peano.end  using.end
tests/imports/: circular_a.end  circular_b.end  exercise.end  nested.end  prelude.end
